--- a/invoicemanagement/package.json
+++ b/invoicemanagement/package.json
@@ -9,16 +9,21 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "antd": "^4.15.0",
+    "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "react": "^17.0.2",
     "react-datepicker": "^3.7.0",
     "react-dom": "^17.0.2",
     "react-dropdown": "^1.9.2",
     "react-hook-form": "^7.0.2",
+    "react-redux": "^7.2.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "react-select": "^4.3.0",
     "reactstrap": "^8.9.0",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.9",
+    "styled-components": "^5.2.3",
+    "thunk": "0.0.1",
     "web-vitals": "^1.0.1",
     "yup": "^0.32.9"
   },
